# DBviewer

./: .gitignore  README.md
backend/: development.ini  pyproject.toml
backend/dbviewer/: __init__.py  cors_tween.py  db.py  query_service.py  routes.py
backend/dbviewer/static/app/: index.html
backend/dbviewer/static/app/assets/: index.css  index.js
backend/dbviewer/templates/: home.mako  spa.mako
backend/dbviewer/views/: __init__.py  views.py
backend/scripts/: download_chinook.py
backend/tests/: conftest.py  test_query_service.py  test_views.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
